--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 html,
 body {
     height: 100%;
+    background: url(../img/header-bg.jpg) no-repeat center center fixed; background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
 }
 
 body {
@@ -15,10 +19,24 @@ body {
 
 .form {
     width: 100%;
-    max-width: 330px;
-    padding: 15px;
+    max-width: 380px;
+    --padding: 15px;
     margin: auto;
 }
+.shadow {
+    background: #FFFFFF;
+    padding: 50px;
+    -webkit-box-shadow: 1px 11px 68px -20px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 1px 11px 68px -20px rgba(0, 0, 0, 0.75);
+    box-shadow: 1px 11px 68px -20px rgba(0, 0, 0, 0.75);
+    border-radius: .3rem;
+}
+.btn-shadow-blue {
+    -webkit-box-shadow: 0px 15px 28px -5px rgba(29, 130, 255, 0.45);
+    -moz-box-shadow: 0px 15px 28px -5px rgba(29, 130, 255, 0.45);
+    box-shadow: 0px 15px 28px -5px rgba(29, 130, 255, 0.45);
+}
+
 .form .checkbox {
     font-weight: 400;
 }
