--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
+    font-family: 'Open Sans', sans-serif;
 }
 
 body {
